two layouts, SQL database

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,9 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="name">Name</string>
-    <string name="names">Names</string>
-    <string name="create">CreateName</string>
+    <string name="names">Name</string>
+    <string name="create">Create</string>
     <string name="mail">Mail</string>
+    <string name="tele">Telephone</string>
+    <string name="you">You Create a new contact with:</string>
 </resources>
